feature(register_user): add route and tests (#45)
